# boilerplate-python-component

./: .flake8  .gitlab-ci.yml  .importlinter  .pre-commit-config.yaml  .pytest.ini  README.md  logging.yml  pyproject.toml
boilerplate_module/: __main__.py
boilerplate_module/cli/: cli_parser.py
boilerplate_module/config/: config.py
boilerplate_module/logger/: logger.py
boilerplate_module/optimizer/: optimizer.py
boilerplate_python_component/: __main__.py
boilerplate_python_component/cli/: __init__.py  cli_parser.py
boilerplate_python_component/config/: __init__.py
boilerplate_python_component/logger/: __init__.py  logger.py
boilerplate_python_component/optimizer/: optimizer.py
tests/: config.py  config.yaml  conftest.py
tests/integration_test/: integration_test.py
tests/integration_test/integration_test_dataset/: test_dataset.json
tests/integration_test/integration_test_reference/: reference.json
